# ptrclaw

./: .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  meson-native-linux.ini  meson-native-macos.ini  meson.build  meson_options.txt
.github/workflows/: ci.yml  hourly-pr-review.yml  memory-benchmark.yml  release.yml  smoke-anthropic.yml  smoke-openai.yml  smoke-openrouter.yml
docs/: bad-ideas.md  memory.md  memory_redesign.md  openai-oauth.md  reverse-proxy.md  whatsapp.md
include/ptrclaw/: ptrclaw.h
scripts/: sync-wrap-hash.sh
src/: agent.cpp  agent.hpp  channel.cpp  channel.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  dispatcher.cpp  dispatcher.hpp  embedder.cpp  embedder.hpp  event.hpp  event_bus.cpp  event_bus.hpp  http.cpp  http.hpp  http_socket.cpp  main.cpp  memory.cpp  memory.hpp  oauth.cpp  oauth.hpp  onboard.cpp  onboard.hpp  output_filter.cpp  output_filter.hpp  plugin.cpp  plugin.hpp  prompt.cpp  prompt.hpp  provider.cpp  provider.hpp  repl.cpp  repl.hpp  session.cpp  session.hpp  skill.cpp  skill.hpp  stream_relay.cpp  (+7 more)
src/channels/: embed.cpp  embed.hpp  telegram.cpp  telegram.hpp  webhook_server.cpp  webhook_server.hpp  whatsapp.cpp  whatsapp.hpp  whatsapp_server.cpp  whatsapp_server.hpp
src/embed/: embed_api.cpp  engine.cpp
src/embedders/: http_embedder.cpp  http_embedder.hpp  ollama_embedder.cpp  ollama_embedder.hpp  openai_embedder.cpp  openai_embedder.hpp
src/memory/: base_memory.hpp  embeddings.cpp  embeddings.hpp  entry_json.hpp  json_memory.cpp  json_memory.hpp  none_memory.cpp  none_memory.hpp  response_cache.cpp  response_cache.hpp  sqlite_memory.cpp  sqlite_memory.hpp  vector.cpp  vector.hpp
src/providers/: anthropic.cpp  anthropic.hpp  compatible.cpp  compatible.hpp  oauth_openai.cpp  oauth_openai.hpp  ollama.cpp  ollama.hpp  openai.cpp  openai.hpp  openrouter.cpp  openrouter.hpp  reliable.cpp  reliable.hpp  sse.cpp  sse.hpp
src/tools/: acp_invoke.cpp  acp_invoke.hpp  cron.cpp  cron.hpp  file_edit.cpp  file_edit.hpp  file_read.cpp  file_read.hpp  file_write.cpp  file_write.hpp  memory_forget.cpp  memory_forget.hpp  memory_link.cpp  memory_link.hpp  memory_recall.cpp  memory_recall.hpp  memory_store.cpp  memory_store.hpp  memory_tool_util.hpp  shell.cpp  shell.hpp  skill_activate.cpp  tool_util.hpp
subprojects/: sqlite3.wrap
subprojects/packagefiles/sqlite3/: meson.build
tests/: .clang-tidy  mock_http_client.hpp  test_acp_invoke.cpp  test_agent.cpp  test_channel.cpp  test_commands.cpp  test_config.cpp  test_cron.cpp  test_dispatcher.cpp  test_embed.cpp  test_embedder.cpp  test_embeddings.cpp  test_event_bus.cpp  test_hatch.cpp  test_helpers.hpp  test_hybrid_search.cpp  test_integration_telegram_memory.cpp  test_json_memory.cpp  test_memory.cpp  test_memory_tools.cpp  test_oauth.cpp  test_onboard.cpp  test_output_filter.cpp  test_plugin.cpp  test_prompt.cpp  test_provider.cpp  test_providers.cpp  test_reliable.cpp  test_response_cache.cpp  test_session.cpp  test_shell_filter.cpp  test_skill.cpp  test_skill_activate.cpp  test_sqlite_memory.cpp  test_sse.cpp  test_telegram.cpp  test_tool_manager.cpp  test_tools.cpp  test_util.cpp  test_whatsapp.cpp  (+1 more)
tests/e2e/: memory_benchmark.py  memory_redesign_bench.py
