# Provider features
option('with_anthropic', type: 'boolean', value: true,
       description: 'Build the Anthropic (Claude) provider')
option('with_openai', type: 'boolean', value: true,
       description: 'Build the OpenAI provider')
option('with_openrouter', type: 'boolean', value: true,
       description: 'Build the OpenRouter provider (requires with_openai)')
option('with_compatible', type: 'boolean', value: true,
       description: 'Build the OpenAI-compatible provider (requires with_openai)')
option('with_ollama', type: 'boolean', value: true,
       description: 'Build the Ollama provider')

# Channel features
option('with_telegram', type: 'boolean', value: true,
       description: 'Build the Telegram channel')
option('with_whatsapp', type: 'boolean', value: false,
       description: 'Build the WhatsApp channel (requires webhook server + reverse proxy)')

# Tool features
option('with_tools', type: 'boolean', value: true,
       description: 'Build all tool implementations (file_read, file_write, file_edit, shell)')

# Memory features
option('with_memory', type: 'boolean', value: true,
       description: 'Build memory system (json + none backends)')
option('with_sqlite_memory', type: 'boolean', value: true,
       description: 'Build SQLite memory backend (requires sqlite3)')
option('with_memory_tools', type: 'boolean', value: true,
       description: 'Build memory tools (memory_store, memory_recall, memory_forget, memory_link)')

# Embedding / vector search
option('with_embeddings', type: 'boolean', value: true,
       description: 'Enable embedding/vector search for memory (requires with_memory)')

# Pipe channel (JSONL stdin/stdout for scripted use)
option('with_pipe', type: 'boolean', value: false,
       description: 'Build pipe channel (JSONL stdin/stdout for benchmarks and scripting)')
